syntax = "proto3";


option csharp_namespace = "UrgentMedicines.Protos";
import "UrgentMedicines/Protos/model.proto";

service NetGrpcService {
  rpc transfer (MessageProto) returns (MessageResponseProto);
}